Collada: Last listed UV map not exported if "Only Selected Selected UV map" is checked. #44884

Closed
opened 2015-05-29 15:26:13 +02:00 by Drongle McMahon · 7 comments

Environment: 2.74 dc15860 Win64 (after triangulation fix to 2.75-testbuild1)

Sorry, but this one has come back. The following clarifies when it happens and may explain earlier failure to reproduce and mistaken impression that it was fixed. With any luck, it's just a simple loop counter problem.

Reproduction:
(1) Open default file;
(2) delete lamp and camera;
(3) UV unwrap default cube;
(4) Export Collada with default options (dae1);
(5) Export Collada with Only Selected UV map checked (dae2);
(6) Add another UV map, select it and unwrap;
(7) Export Collada with Only Selected UV map checked (dae3);
(8) Select the first UV map;
(9) Export Collada with Only Selected UV map checked (dae4);

Expected: All exported dae files have one UV map.
Observed: dae2 and dae 3 have no UV map. The others do have one.

More generally: However may UV maps are added or removed, whenever the selected UV map is the last in the list and the Only Selected UV map option is checked, no UV map is exported. All UV maps are exported when the option is unchecked.

Environment: 2.74 dc15860 Win64 (after triangulation fix to 2.75-testbuild1) Sorry, but this one has come back. The following clarifies when it happens and may explain earlier failure to reproduce and mistaken impression that it was fixed. With any luck, it's just a simple loop counter problem. Reproduction: (1) Open default file; (2) delete lamp and camera; (3) UV unwrap default cube; (4) Export Collada with default options (dae1); (5) Export Collada with Only Selected UV map checked (dae2); (6) Add another UV map, select it and unwrap; (7) Export Collada with Only Selected UV map checked (dae3); (8) Select the first UV map; (9) Export Collada with Only Selected UV map checked (dae4); Expected: All exported dae files have one UV map. Observed: dae2 and dae 3 have no UV map. The others do have one. More generally: However may UV maps are added or removed, whenever the selected UV map is the last in the list and the Only Selected UV map option is checked, no UV map is exported. All UV maps are exported when the option is unchecked.

Changed status to: 'Open'

Changed status to: 'Open'
Gaia Clary was assigned by Drongle McMahon 2015-05-29 15:26:14 +02:00

Added subscriber: @Drongle

Added subscriber: @Drongle

This issue was referenced by 51bec8e22e

This issue was referenced by 51bec8e22e3b6ac763b84c41c206f9a3a022e5e0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a5a1d4aa3a

This issue was referenced by a5a1d4aa3a26f1660c09aa2b09eb033f594af2c5
Member

The calculation of the UV maps for export used a wrong method to get the index of the active UV Map.
This was due to a misunderstanding of how the API works.
I think now it is really fixed.

Sorry for the mistake.

The calculation of the UV maps for export used a wrong method to get the index of the active UV Map. This was due to a misunderstanding of how the API works. I think now it is really fixed. Sorry for the mistake.

Good as far as I can see in 28ef76d May 30 2015.

Good as far as I can see in 28ef76d May 30 2015.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44884
No description provided.