fix T44884: Index counter for active UV Map used wrong offset